--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,29 @@
 asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
 comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+contourpy==1.2.1
+cycler==0.12.1
 debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1707444446407/work
 decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+et-xmlfile==1.1.0
 executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1698579936712/work
 filelock==3.14.0
+fonttools==4.51.0
 fsspec==2024.5.0
+h5py==3.11.0
+imageio==2.34.1
 importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1710971335535/work
 ipykernel @ file:///croot/ipykernel_1705933831282/work
 ipython @ file:///croot/ipython_1704833016303/work
 jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
 Jinja2==3.1.4
+joblib==1.4.2
 jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1710255804825/work
 jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1710257359434/work
+kiwisolver==1.4.5
+lazy_loader==0.4
 MarkupSafe==2.1.5
+mat73==0.63
+matplotlib==3.9.0
 matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
 mpmath==1.3.0
 nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
@@ -30,24 +41,38 @@ nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.20.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.1.105
+openpyxl==3.1.4
 packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1710075952259/work
+pandas==2.2.2
 parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
 pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
+pillow==10.3.0
 platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1715777629804/work
 prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1702399386289/work
 psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1705722403006/work
 ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
 pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
 Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
+pyparsing==3.1.2
 python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+pytz==2024.1
 pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1715024370414/work
+scikit-image==0.23.2
+scikit-learn==1.4.2
+scipy==1.13.0
+seaborn==0.13.2
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
 stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
 sympy==1.12
+termcolor==2.4.0
+threadpoolctl==3.5.0
+tifffile==2024.5.10
 torch==2.3.0
 tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1708363099148/work
+tqdm==4.66.4
 traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
 triton==2.3.0
 typing_extensions==4.11.0
+tzdata==2024.1
 wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
 zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1695255097490/work
